--- a/inaam-rapid-asp-net-core/examples/Properties/launchSettings.json
+++ b/inaam-rapid-asp-net-core/examples/Properties/launchSettings.json
@@ -4,8 +4,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:51739",
-      "sslPort": 0
+      "applicationUrl": "http://localhost:58137",
+      "sslPort": 44310
     }
   },
   "profiles": {
@@ -17,11 +17,11 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "inaam_rapid_asp_net_core": {
+    "examples": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
-      "applicationUrl": "http://localhost:5000",
+      "launchUrl": "api/categories/form",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
