--- a/inaam-rapid-asp-net-core/inaam-rapid-asp-net-core/inaam-rapid-asp-net-core.csproj
+++ b/inaam-rapid-asp-net-core/inaam-rapid-asp-net-core/inaam-rapid-asp-net-core.csproj
@@ -1,9 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>inaam_rapid_asp_net_core</RootNamespace>
   </PropertyGroup>
-
 
 </Project>
