--- a/inaam-rapid-react/package.json
+++ b/inaam-rapid-react/package.json
@@ -24,7 +24,9 @@
     "deploy": "gh-pages -d example/build"
   },
   "peerDependencies": {
-    "react": "^16.0.0"
+    "react": "^16.0.0",
+    "bootstrap": "^4.0.0",
+    "react-bootstrap": "^1.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -55,7 +57,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "bootstrap": "^4.5.0",
+    "react-bootstrap": "^1.0.1"
   },
   "files": [
     "dist"
